@@ -1,20 +1,19 @@
 package io.openems.common.websocket;
 
+import static io.openems.common.utils.ThreadPoolUtils.shutdownAndAwaitTermination;
+
 import java.net.BindException;
 import java.net.InetSocketAddress;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadPoolExecutor;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.function.Function;
 
 import org.java_websocket.WebSocket;
-import org.java_websocket.exceptions.WebsocketNotConnectedException;
 import org.java_websocket.handshake.ClientHandshake;
 import org.java_websocket.server.WebSocketServer;
 import org.slf4j.Logger;
@@ -22,57 +21,29 @@ import org.slf4j.LoggerFactory;
 
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 
-import io.openems.common.exceptions.OpenemsError.OpenemsNamedException;
-import io.openems.common.exceptions.OpenemsException;
 import io.openems.common.jsonrpc.base.JsonrpcMessage;
-import io.openems.common.jsonrpc.base.JsonrpcNotification;
-import io.openems.common.jsonrpc.base.JsonrpcRequest;
-import io.openems.common.jsonrpc.base.JsonrpcResponse;
-import io.openems.common.utils.JsonrpcUtils;
-import io.openems.common.utils.StringUtils;
 import io.openems.common.utils.ThreadPoolUtils;
 
 public abstract class AbstractWebsocketServer<T extends WsData> extends AbstractWebsocket<T> {
-
-	public static enum DebugMode {
-		OFF, SIMPLE, DETAILED;
-
-		/**
-		 * Is this {@link DebugMode} at least as high as the other {@link DebugMode}?.
-		 * 
-		 * @param other the other {@link DebugMode}
-		 * @return true if yes
-		 */
-		public boolean isAtLeast(DebugMode other) {
-			return this.ordinal() >= other.ordinal();
-		}
-	}
 
 	/**
 	 * Shared {@link ExecutorService}.
 	 */
 	private final ThreadPoolExecutor executor;
 
-	private final ConcurrentHashMap<String, AtomicInteger> activeTasks = new ConcurrentHashMap<>(100);
-	private static final Function<String, AtomicInteger> ATOMIC_INTEGER_PROVIDER = (key) -> {
-		return new AtomicInteger(0);
-	};
-
 	private final Logger log = LoggerFactory.getLogger(AbstractWebsocketServer.class);
 	private final int port;
 	private final WebSocketServer ws;
-	private final DebugMode debugMode;
 	private final Collection<WebSocket> connections = ConcurrentHashMap.newKeySet();
 
 	/**
 	 * Construct an {@link AbstractWebsocketServer}.
 	 *
-	 * @param name      to identify this server
-	 * @param port      to listen on
-	 * @param poolSize  number of threads dedicated to handle the tasks
-	 * @param debugMode activate a regular debug log about the state of the tasks
+	 * @param name     to identify this server
+	 * @param port     to listen on
+	 * @param poolSize number of threads dedicated to handle the tasks
 	 */
-	protected AbstractWebsocketServer(String name, int port, int poolSize, DebugMode debugMode) {
+	protected AbstractWebsocketServer(String name, int port, int poolSize) {
 		super(name);
 		this.executor = (ThreadPoolExecutor) Executors.newFixedThreadPool(poolSize,
 				new ThreadFactoryBuilder().setNameFormat(name + "-%d").build());
@@ -80,7 +51,7 @@ public abstract class AbstractWebsocketServer<T extends WsData> extends Abstract
 		this.port = port;
 		this.ws = new WebSocketServer(new InetSocketAddress(port),
 				/* AVAILABLE_PROCESSORS */ Runtime.getRuntime().availableProcessors(), //
-				/* drafts, no filter */ Collections.emptyList(), //
+				/* drafts, no filter */ List.of(new MyDraft6455()), //
 				this.connections) {
 
 			@Override
@@ -89,83 +60,40 @@ public abstract class AbstractWebsocketServer<T extends WsData> extends Abstract
 
 			@Override
 			public void onOpen(WebSocket ws, ClientHandshake handshake) {
-				try {
-					T wsData = AbstractWebsocketServer.this.createWsData();
-					wsData.setWebsocket(ws);
-					ws.setAttachment(wsData);
-					var jHandshake = WebsocketUtils.handshakeToJsonObject(handshake);
-					AbstractWebsocketServer.this
-							.execute(new OnOpenHandler(AbstractWebsocketServer.this, ws, jHandshake));
-
-				} catch (Throwable t) {
-					AbstractWebsocketServer.this.handleInternalErrorSync(t, WebsocketUtils.getWsDataString(ws));
-				}
+				T wsData = AbstractWebsocketServer.this.createWsData(ws);
+				ws.setAttachment(wsData);
+				AbstractWebsocketServer.this.execute(new OnOpenHandler(//
+						ws, handshake, //
+						AbstractWebsocketServer.this.getOnOpen(), //
+						AbstractWebsocketServer.this::logWarn, //
+						AbstractWebsocketServer.this::handleInternalError));
 			}
 
 			@Override
-			public void onMessage(WebSocket ws, String stringMessage) {
-				try {
-					JsonrpcMessage message;
-					try {
-						try {
-							message = JsonrpcMessage.from(stringMessage);
-
-						} catch (OpenemsNamedException e) {
-							// handle deprecated non-JSON-RPC messages
-							message = AbstractWebsocketServer.this.handleNonJsonrpcMessage(ws, stringMessage, e);
-						}
-						if (message == null) {
-							// silently ignore 'null'
-							return;
-						}
-					} catch (OpenemsNamedException e) {
-						AbstractWebsocketServer.this.handleInternalErrorAsync(e, WebsocketUtils.getWsDataString(ws));
-						return;
-					}
-
-					if (message instanceof JsonrpcRequest) {
-						AbstractWebsocketServer.this.execute(new OnRequestHandler(AbstractWebsocketServer.this, ws,
-								(JsonrpcRequest) message, response -> {
-									AbstractWebsocketServer.this.sendMessage(ws, response);
-								}));
-
-					} else if (message instanceof JsonrpcResponse) {
-						AbstractWebsocketServer.this.execute(
-								new OnResponseHandler(AbstractWebsocketServer.this, ws, (JsonrpcResponse) message));
-
-					} else if (message instanceof JsonrpcNotification) {
-						AbstractWebsocketServer.this.execute(new OnNotificationHandler(AbstractWebsocketServer.this, ws,
-								(JsonrpcNotification) message));
-					}
-
-				} catch (Throwable t) {
-					AbstractWebsocketServer.this.handleInternalErrorSync(t, WebsocketUtils.getWsDataString(ws));
-				}
+			public void onMessage(WebSocket ws, String message) {
+				AbstractWebsocketServer.this.execute(new OnMessageHandler(//
+						ws, message, //
+						AbstractWebsocketServer.this.getOnRequest(), //
+						AbstractWebsocketServer.this.getOnNotification(), //
+						AbstractWebsocketServer.this::sendMessage, //
+						AbstractWebsocketServer.this::handleInternalError, //
+						AbstractWebsocketServer.this::logWarn));
 			}
 
 			@Override
 			public void onError(WebSocket ws, Exception ex) {
-				try {
-					if (ws == null) {
-						AbstractWebsocketServer.this.handleInternalErrorAsync(ex, WebsocketUtils.getWsDataString(ws));
-					} else {
-						AbstractWebsocketServer.this.execute(new OnErrorHandler(AbstractWebsocketServer.this, ws, ex));
-					}
-
-				} catch (Throwable t) {
-					AbstractWebsocketServer.this.handleInternalErrorSync(t, WebsocketUtils.getWsDataString(ws));
-				}
+				AbstractWebsocketServer.this.execute(new OnErrorHandler(//
+						ws, ex, //
+						AbstractWebsocketServer.this.getOnError(), //
+						AbstractWebsocketServer.this::handleInternalError));
 			}
 
 			@Override
 			public void onClose(WebSocket ws, int code, String reason, boolean remote) {
-				try {
-					AbstractWebsocketServer.this
-							.execute(new OnCloseHandler(AbstractWebsocketServer.this, ws, code, reason, remote));
-
-				} catch (Throwable t) {
-					AbstractWebsocketServer.this.handleInternalErrorSync(t, WebsocketUtils.getWsDataString(ws));
-				}
+				AbstractWebsocketServer.this.execute(new OnCloseHandler(//
+						ws, code, reason, remote, //
+						AbstractWebsocketServer.this.getOnClose(), //
+						AbstractWebsocketServer.this::handleInternalError));
 			}
 
 			@Override
@@ -201,12 +129,10 @@ public abstract class AbstractWebsocketServer<T extends WsData> extends Abstract
 				return AbstractWebsocketServer.this.connections;
 			}
 		};
+
 		// Allow the port to be reused. See
 		// https://stackoverflow.com/questions/3229860/what-is-the-meaning-of-so-reuseaddr-setsockopt-option-linux
 		this.ws.setReuseAddr(true);
-
-		// Debug-Mode
-		this.debugMode = debugMode == null ? DebugMode.OFF : debugMode;
 	}
 
 	/**
@@ -215,20 +141,10 @@ public abstract class AbstractWebsocketServer<T extends WsData> extends Abstract
 	 * @return the debug log string
 	 */
 	public String debugLog() {
-		var b = new StringBuilder("[monitor] ") //
-				.append("Connections: ").append(this.ws.getConnections().size()).append(", ") //
-				.append(ThreadPoolUtils.debugLog(this.executor)); //
-		if (this.debugMode.isAtLeast(DebugMode.DETAILED) && this.executor.getActiveCount() > 0) {
-			b.append(", Tasks: ");
-			this.activeTasks.forEach((id, count) -> {
-				var cnt = count.get();
-				if (cnt > 0) {
-					b.append(id).append(':').append(cnt).append(", ");
-				}
-			});
-		}
-
-		return b.toString();
+		return new StringBuilder("[monitor] ") //
+				.append("Connections: ").append(this.connections.size()).append(", ") //
+				.append(ThreadPoolUtils.debugLog(this.executor)) //
+				.toString();
 	}
 
 	/**
@@ -249,8 +165,10 @@ public abstract class AbstractWebsocketServer<T extends WsData> extends Abstract
 			if (t instanceof BindException) {
 				this.logError(this.log, "Unable to Bind to port [" + this.port + "]");
 			} else {
-				this.logError(this.log,
-						"OnInternalError for " + wsDataString + ". " + t.getClass() + ": " + t.getMessage());
+				this.logError(this.log, new StringBuilder() //
+						.append("OnInternalError for ").append(wsDataString).append(". ") //
+						.append(t.getClass()).append(": ") //
+						.append(t.getMessage()).toString());
 			}
 			t.printStackTrace();
 		};
@@ -261,35 +179,12 @@ public abstract class AbstractWebsocketServer<T extends WsData> extends Abstract
 	}
 
 	/**
-	 * Sends a message to WebSocket.
+	 * Broadcasts a {@link JsonrpcMessage} to all connected WebSockets.
 	 *
-	 * @param ws      the WebSocket
-	 * @param message the JSON-RPC Message
-	 */
-	public void sendMessage(WebSocket ws, JsonrpcMessage message) {
-		try {
-			ws.send(message.toString());
-
-		} catch (WebsocketNotConnectedException e) {
-			WsData wsData = ws.getAttachment();
-
-			if (wsData != null) {
-				this.logWarn(this.log, "Connection [" + wsData.toString() + "] is closed. Unable to send message: "
-						+ StringUtils.toShortString(JsonrpcUtils.simplifyJsonrpcMessage(message), 100));
-			} else {
-				this.logWarn(this.log, "Connection is closed. Unable to send message: "
-						+ StringUtils.toShortString(JsonrpcUtils.simplifyJsonrpcMessage(message), 100));
-			}
-		}
-	}
-
-	/**
-	 * Broadcasts a message to all connected WebSockets.
-	 *
-	 * @param message the JSON-RPC Message
+	 * @param message the {@link JsonrpcMessage}
 	 */
 	public void broadcastMessage(JsonrpcMessage message) {
-		for (WebSocket ws : this.getConnections()) {
+		for (var ws : this.getConnections()) {
 			this.sendMessage(ws, message);
 		}
 	}
@@ -304,7 +199,7 @@ public abstract class AbstractWebsocketServer<T extends WsData> extends Abstract
 	}
 
 	/**
-	 * Starts the websocket server.
+	 * Starts the {@link WebSocketServer}.
 	 */
 	@Override
 	public void start() {
@@ -320,37 +215,16 @@ public abstract class AbstractWebsocketServer<T extends WsData> extends Abstract
 	 */
 	@Override
 	protected void execute(Runnable command) {
-		if (this.debugMode.isAtLeast(DebugMode.DETAILED)) {
-			this.executor.execute(() -> {
-				String id = AbstractWebsocketServer.getRunnableIdentifier(command);
-				try {
-					this.activeTasks.computeIfAbsent(id, ATOMIC_INTEGER_PROVIDER).incrementAndGet();
-					command.run();
-				} catch (Throwable t) {
-					throw t;
-				} finally {
-					this.activeTasks.get(id).decrementAndGet();
-				}
-			});
-		} else {
-			this.executor.execute(command);
-		}
-	}
-
-	private static final String getRunnableIdentifier(Runnable r) {
-		if (r instanceof OnRequestHandler) {
-			return ((OnRequestHandler) r).getRequestMethod();
-		}
-		return r.getClass().getSimpleName();
+		this.executor.execute(command);
 	}
 
 	/**
-	 * Stops the websocket server.
+	 * Stops the {@link WebSocketServer}.
 	 */
 	@Override
 	public void stop() {
 		// Shutdown executors
-		ThreadPoolUtils.shutdownAndAwaitTermination(this.executor, 5);
+		shutdownAndAwaitTermination(this.executor, 5);
 
 		var tries = 3;
 		while (tries-- > 0) {
@@ -370,19 +244,4 @@ public abstract class AbstractWebsocketServer<T extends WsData> extends Abstract
 		this.logError(this.log, "Stopping websocket server failed too often.");
 		super.stop();
 	}
-
-	/**
-	 * Handle Non-JSON-RPC messages.
-	 * 
-	 * @param ws            the {@link WebSocket}
-	 * @param stringMessage the message
-	 * @param e             the parse error
-	 * @return message converted to {@link JsonrpcMessage}; or null
-	 * @throws OpenemsNamedException if conversion is not possible
-	 */
-	protected JsonrpcMessage handleNonJsonrpcMessage(WebSocket ws, String stringMessage, OpenemsNamedException e)
-			throws OpenemsNamedException {
-		throw new OpenemsException("Unhandled Non-JSON-RPC message", e);
-	}
-
 }
